# gtfs-protobuf-to-trips-rs

./: Cargo.toml  README.md
src/: app_settings.rs  main.rs  trip.rs  trip_stop.rs
src/protos/: gtfs_realtime.rs  mod.rs
