[package]
name = "gtfs-protobuf-to-trips-rs"
version = "0.1.0"
authors = ["stevekirks"]
edition = "2018"

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
futures = "0.3"
protobuf = "2.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }